
SET( CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/modules )

SET( NAME mrClasses )
SET( PLUGIN_VERSION "0.1" )

FIND_PACKAGE( BuildDir  REQUIRED )
FIND_PACKAGE( Mentalray REQUIRED )
FIND_PACKAGE( Ruby      REQUIRED )


#
# Extract ruby version from version.h
#
FILE( READ "${RUBY_INCLUDE_PATH}/version.h" VERSION_H )
STRING( REGEX REPLACE ".*RUBY_VERSION \"([0-9]+\\.[0-9]+)[^\"]+\".*" "\\1" RUBY_VERSION ${VERSION_H} )


SET( RUBY_LIBNAME "ruby${RUBY_VERSION}/${NAME}" )

#
# List directories for -I and -L options.
#
INCLUDE_DIRECTORIES(
  .
  ${RUBY_INCLUDE_PATH}
  ${MENTALRAY_INCLUDE_DIR}
  )

LINK_DIRECTORIES(
  ${MENTALRAY_LIBRARY_DIR}
  ${RUBY_LIBRARY_PATH}
  )


FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

SET_SOURCE_FILES_PROPERTIES(${NAME}.i PROPERTIES CPLUSPLUS ON)

SET( CMAKE_SWIG_FLAGS ${SWIG_OS} -noautorename -addextern  )

SWIG_ADD_MODULE( ${RUBY_LIBNAME} ruby "${NAME}.i" )

SET( LIBRARIES
  ${MENTALRAY_LIBRARIES}
  ${RUBY_LIBRARIES}
  )

SWIG_LINK_LIBRARIES( ${RUBY_LIBNAME} ${LIBRARIES} )

SET_TARGET_PROPERTIES( 
    "${RUBY_LIBNAME}"
    PROPERTIES 
    PREFIX     ""
    VERSION    "${PLUGIN_VERSION}"
    SOVERSION  "${PLUGIN_VERSION}"
    LINK_FLAGS "${MENTALRAY_LINK_FLAGS}"
    )
