
SET( SOURCES dlopen.cpp )

IF(WIN32)
  ADD_DEFINITIONS( -DWIN32 -EHsc )
ELSE(WIN32)
  SET( LIBRARIES dl )
ENDIF(WIN32)


ADD_EXECUTABLE( dlopen ${SOURCES} )
TARGET_LINK_LIBRARIES( dlopen ${LIBRARIES} )

#
# Install stuff correctly
#
INSTALL(TARGETS dlopen
  RUNTIME DESTINATION "${CMAKE_SYSTEM_NAME}-${CMAKE_BUILD_ARCH}/bin"
)

